fix: warehouse response dto impl